<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/login_background_color">

    <RelativeLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center"
            android:animateLayoutChanges="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:visibility="gone"
            android:id="@+id/register_part"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:animateLayoutChanges="true"
                android:weightSum="1.0"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:singleLine="true"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.7"
                    android:layout_marginBottom="15dp"
                    android:textColorHint="#dfdfdf"
                    android:textColor="#dfdfdf"
                    android:fontFamily="sans-serif-light"
                    android:textSize="@dimen/activity_login_edittext_text_size"
                    android:padding="@dimen/activity_login_edittext_padding"
                    android:background="@drawable/login_round_corner_view"
                    android:id="@+id/firstname_input"
                    android:hint="@string/login_form_firstname"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <Spinner
                    android:layout_marginLeft="5dp"
                    android:dropDownWidth="70dp"
                    android:popupBackground="@color/login_background_color"
                    android:layout_weight="0.3"
                    android:layout_marginBottom="15dp"
                    android:textColorHint="#dfdfdf"
                    android:textColor="#dfdfdf"
                    android:fontFamily="sans-serif-light"
                    android:textSize="@dimen/activity_login_edittext_text_size"
                    android:padding="@dimen/activity_login_edittext_padding"
                    android:background="@drawable/login_round_corner_view"
                    android:id="@+id/age_input"
                    android:hint="@string/login_form_age"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <EditText
                android:singleLine="true"
                android:layout_marginBottom="15dp"
                android:textColorHint="#dfdfdf"
                android:fontFamily="sans-serif-light"
                android:textColor="#dfdfdf"
                android:textSize="@dimen/activity_login_edittext_text_size"
                android:padding="@dimen/activity_login_edittext_padding"
                android:background="@drawable/login_round_corner_view"
                android:id="@+id/lastname_input"
                android:hint="@string/login_form_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/register_part"
            android:animateLayoutChanges="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_part">

            <com.example.nfctransfer.intlphoneinput.IntlPhoneInput

                android:layout_marginBottom="15dp"
                android:paddingTop="2dp"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="2dp"
                android:paddingStart="@dimen/activity_login_edittext_padding"
                android:paddingEnd="@dimen/activity_login_edittext_padding"
                android:background="@drawable/login_round_corner_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone_input">

            </com.example.nfctransfer.intlphoneinput.IntlPhoneInput>


            <EditText
                android:singleLine="true"
                android:layout_marginBottom="15dp"
                android:textColorHint="#dfdfdf"
                android:fontFamily="sans-serif-light"
                android:textColor="#dfdfdf"
                android:textSize="@dimen/activity_login_edittext_text_size"
                android:padding="@dimen/activity_login_edittext_padding"
                android:background="@drawable/login_round_corner_view"
                android:id="@+id/password_input"
                android:inputType="textPassword"
                android:hint="@string/login_form_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:id="@+id/layout_connect_action"
            android:layout_below="@+id/login_part"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:enabled="false"
                    android:padding="@dimen/activity_login_edittext_padding"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#dfdfdf"
                    android:textSize="@dimen/activity_login_button_text_size"
                    android:background="@drawable/login_round_corner_view_inverted"
                    android:id="@+id/button_connection"
                    android:text="@string/login_button_connection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:visibility="invisible"
                    android:id="@+id/action_progress_bar"
                    android:indeterminateTint="@color/login_background_color"
                    android:background="@drawable/perfect_round_corner_view_inverted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_secondary_actions"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layout_register_action"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="sans-serif-light"
                android:id="@+id/button_register"
                android:text="@string/login_button_register"
                android:textColor="#dfdfdf"
                android:textSize="@dimen/activity_login_button_text_size"
                android:background="@drawable/login_round_corner_view"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/layout_cancel_register_action"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:fontFamily="sans-serif-light"
                android:id="@+id/button_cancel_register"
                android:text="@string/login_button_cancel"
                android:textColor="#dfdfdf"
                android:textSize="@dimen/activity_login_button_text_size"
                android:background="@drawable/login_round_corner_view_inverted"
                android:layout_width="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_cancel_auth_action"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:fontFamily="sans-serif-light"
            android:id="@+id/button_cancel_auth_action"
            android:text="@string/login_button_cancel"
            android:textColor="#dfdfdf"
            android:textSize="@dimen/activity_login_button_text_size"
            android:background="@drawable/login_round_corner_view_inverted"
            android:layout_width="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>